--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,9 +15,10 @@ jobs:
         node-version: lts/*
     - name: Install dependencies
       run: npm ci
-    - uses: microsoft/playwright-github-action@v1
-      with: 
-          run: npm test
+    - name: Install Playwright Browsers
+      run: npx playwright install
+    - name: Run Playwright tests
+      run: npm test
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
