--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,41 +1,27 @@
 name: Playwright Tests
-
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
   test:
-    runs-on: windows-latest
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Install Playwright Browsers
-        run: npx playwright install
-
-      - name: Run Playwright tests
-        run: npm test
-
-      - name: Upload Playwright report to Jira
-        shell: pwsh
-        run: |
-          $jiraEmail = "${{ secrets.JIRA_EMAIL }}"
-          $jiraToken = "${{ secrets.JIRA_API_TOKEN }}"
-          $issueKey = "SCRUM-1"
-          $filePath = "reports/cucumber_report.html"
-
-          $base64Auth = [Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes("${jiraEmail}:${jiraToken}"))
-
-          Invoke-WebRequest -Uri "https://imran023786.atlassian.net/rest/api/3/issue/$issueKey/attachments" `
-                            -Method Post `
-                            -Headers @{ "X-Atlassian-Token" = "no-check"; "Authorization" = "Basic $base64Auth" } `
-                            -InFile $filePath
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
+    - name: Install dependencies
+      run: npm ci
+    - name: Install Playwright Browsers
+      run: npx playwright install
+    - name: Run Playwright tests
+      run: npm test
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: reports
+        path: reports
+        retention-days: 30
